--- a/DSCC_000010983_API/appsettings.json
+++ b/DSCC_000010983_API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=database.cslba5taobcx.eu-north-1.rds.amazonaws.com;Database=database;Username=postgres;Password=loveSavesTheWorld;"
+    "DefaultConnection": "Server=localhost;Database=Blog;UserId=database-1;Password=loveSavesTheWorld;TrustServerCertificate=true;"
   },
+
   "AllowedHosts": "*"
 }
