--- a/DSCC_000010983_API/appsettings.json
+++ b/DSCC_000010983_API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Blog;UserId=database-1;Password=loveSavesTheWorld;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=database-1.cslba5taobcx.eu-north-1.rds.amazonaws.com,1433;Database=DB;User Id=admin;Password=12345678;TrustServerCertificate=true;MultiSubnetFailover=True"
   },
 
   "AllowedHosts": "*"
